<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_airtickets"
        android:icon="@drawable/ic_airtickets"
        android:title="@string/label_airtickets" />
    <item
        android:id="@+id/navigation_hotels"
        android:icon="@drawable/ic_hotels"
        android:title="@string/label_hotels" />
    <item
        android:id="@+id/navigation_shorter"
        android:icon="@drawable/ic_shorter"
        android:title="@string/label_shorter" />
    <item
        android:id="@+id/navigation_subscribes"
        android:icon="@drawable/ic_subscribes"
        android:title="@string/label_subscribes" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/label_profile" />
</menu>