<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_nav_graph"
    app:startDestination="@id/searchFragment">

    <dialog
        android:id="@+id/searchFragment"
        android:name="ru.softpeach.airtickets.search.SearchFragment"
        android:label="@string/label_search">
        <action android:id="@+id/action_searchFragment_to_plugFragment"
            app:destination="@id/plugSearchFragment"/>
        <action android:id="@+id/action_searchFragment_to_flightFragment"
            app:destination="@id/flightFragment">
            <argument
                android:name="from"
                app:argType="string"
                app:nullable="false"/>
            <argument
                android:name="to"
                app:argType="string"
                app:nullable="false"/>
        </action>
    </dialog>


    <fragment
        android:id="@+id/plugSearchFragment"
        android:name="ru.softpeach.airtickets.plug.PlugSearchFragment"
        android:label="@string/label_plug">
    </fragment>

    <fragment
        android:id="@+id/flightFragment"
        android:name="ru.softpeach.airtickets.flight.FlightFragment"
        android:label="@string/label_flight">
        <action android:id="@+id/action_flightFragment_to_ticketFragment"
            app:destination="@id/ticketFragment">
            <argument
                android:name="from"
                app:argType="string"
                app:nullable="false"/>
            <argument
                android:name="to"
                app:argType="string"
                app:nullable="false"/>
            <argument
                android:name="date"
                app:argType="long"
                app:nullable="false"/>
            <argument
                android:name="count_passengers"
                app:argType="integer"
                app:nullable="false"/>
        </action>
    </fragment>

    <fragment
        android:id="@+id/ticketFragment"
        android:name="ru.softpeach.airtickets.ticket.TicketFragment"
        android:label="@string/label_ticket">
    </fragment>

</navigation>
